<resources>
    <string name="app_name">Calculator</string>
    <string name="plusText">+</string>
    <string name="minusText">-</string>
    <string name="clearText">Clear</string>
    <string name="divideText">/</string>
    <string name="multiplyText">*</string>
    <string name="percentText">%</string>
    <string name="dotText">.</string>
    <string name="zeroText">0</string>
    <string name="equalText">=</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="aboutText">About</string>
    <string name="closeText">Close</string>
    <string name="channel_name">Results</string>
</resources>