<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText"
        app:layout_constraintVertical_bias="0.98">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/plusButton"
                style="@style/buttonStyle"
                android:text="@string/plusText"
                android:textColor="@color/teal_200" />

            <Button
                android:id="@+id/minusButton"
                style="@style/buttonStyle"
                android:text="@string/minusText"
                android:textColor="@color/teal_200" />

            <Button
                android:id="@+id/clearButton"
                style="@style/buttonStyle"
                android:text="@string/clearText"

                android:textColor="@color/teal_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/multiplyButton"
                style="@style/buttonStyle"
                android:text="@string/multiplyText"
                android:textColor="@color/teal_200" />

            <Button
                android:id="@+id/divideButton"
                style="@style/buttonStyle"
                android:text="@string/divideText"
                android:textColor="@color/teal_200" />

            <Button
                android:id="@+id/percentButton"
                style="@style/buttonStyle"
                android:text="@string/percentText"
                android:textColor="@color/teal_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dotButton"
                style="@style/buttonStyle"
                android:text="@string/dotText" />

            <Button
                android:id="@+id/zeroButton"
                style="@style/buttonStyle"
                android:text="@string/zeroText" />

            <Button
                android:id="@+id/equalButton"
                style="@style/buttonStyle"
                android:text="@string/equalText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneButton"
                style="@style/buttonStyle"
                android:text="@string/oneText" />

            <Button
                android:id="@+id/twoButton"
                style="@style/buttonStyle"
                android:text="@string/twoText" />

            <Button
                android:id="@+id/threeButton"
                style="@style/buttonStyle"
                android:text="@string/threeText" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourButton"
                style="@style/buttonStyle"
                android:text="@string/fourText" />

            <Button
                android:id="@+id/fiveButton"
                style="@style/buttonStyle"
                android:text="@string/fiveText" />

            <Button
                android:id="@+id/sixButton"
                style="@style/buttonStyle"
                android:text="@string/sixText" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenButton"
                style="@style/buttonStyle"
                android:text="@string/sevenText" />

            <Button
                android:id="@+id/eightButton"
                style="@style/buttonStyle"
                android:text="@string/eightText" />

            <Button
                android:id="@+id/nineButton"
                style="@style/buttonStyle"
                android:text="@string/nineText" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/resultText"
        style="@style/textStyle"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

</androidx.constraintlayout.widget.ConstraintLayout>